new organization inside folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
-boost/
+boost/*cpp
 poco/
-tinyobjloader/
 curveplot/
-glew/
+glew/*.cpp
 lcm/
-lib3ds/
-vesta/
-
+lib3ds/*.cpp
+vesta/*.cpp
 qwt/
 arm/
-serial/
+serial/*.cpp
 build-*
 *.user
-
-Eigen/
-
-glm/
-
-jsoncpp/
-
-rs232/
+Eigen/*.cpp
+glm/*.cpp
